Create css for the chat box part

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!--  Input box for user messages -->
     <div class="input-box">  
         <input type="text" id="user-input" placeholder="Type your message...">
-        <button id="send-btn">Send</button>
+        <button id="send-btn">↑</button>
+    </div>
 </body>
 </html>
