--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
         <input type="text" id="user-input" placeholder="Type your message...">
         <button id="send-btn">↑</button>
     </div>
+    
+    <!-- Link to the JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
