--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI chatbot</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="chat-containor">
@@ -23,6 +22,6 @@
     </div>
     
     <!-- Link to the JavaScript file -->
-    <script src="script.js"></script>
+    <script type="module" scr="script.js"></script>
 </body>
 </html>
