--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </div>
     
     <!-- Link to the JavaScript file -->
-    <script type="module" scr="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
