--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <h1>.Chat Bot.</h1>
         </header>
         <div id="chat-box" class="chat-box ">
-            <div class="message user-chat">Hi.....</div>
-            <div class="message bot-chat">Hi..how are you</div>
+            <div class="message user-chat">.....</div>
+            <div class="message bot-chat">.....</div>
     </div>
     <!--  Input box for user messages -->
     <div class="input-box">  
