--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <div id="chat-box" class="chat-box ">
             <div class="message user-chat">Hi.</div>
-            <div class="message bot-chat">To get started, could you please let me know what you're looking for?</div>
+            <div class="message bot-chat">Hello. To begin, could you please let me know how I can assist you today?</div>
     </div>
     <!--  Input box for user messages -->
     <div class="input-box">  
