modify the chat box.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="chat-containor">
+    <div class="chat-container">
         <header>
             <h1>.Chat Bot.</h1>
         </header>
         <div id="chat-box" class="chat-box ">
             <div class="message user-chat">Hi.</div>
             <div class="message bot-chat">Hello. To begin, could you please let me know how I can assist you today?</div>
-    </div>
+            </div>
     <!--  Input box for user messages -->
     <div class="input-box">  
         <input type="text" id="user-input" placeholder="Type your message...">
