--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 </head>
 <body>
     <div class="chat-container">
-        <header>
-            <h1>.Chat Bot.</h1>
+        <header class="chat-header">
+            <h1>🤖 AI Chatbot</h1>
         </header>
-        <div id="chat-box" class="chat-box ">
-            <div class="message user-chat">Hi.</div>
-            <div class="message bot-chat">Hello. To begin, could you please let me know how I can assist you today?</div>
-            </div>
-    <!--  Input box for user messages -->
-    <div class="input-box">  
-        <input type="text" id="user-input" placeholder="Type your message...">
-        <button id="send-btn">↑</button>
+        <div id="chat-box" class="chat-box">
+            <div class="message user-chat">Hi there!</div>
+            <div class="message bot-chat">Hello! How can I assist you today?</div>
+        </div>
+        <div class="input-box">  
+            <input type="text" id="user-input" placeholder="Type your message..." autocomplete="off">
+            <button id="send-btn">
+                <span>➤</span>
+            </button>
+        </div>
     </div>
     
-    <!-- Link to the JavaScript file -->
     <script type="module" src="script.js"></script>
 </body>
 </html>
