--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="chat-container">
         <header class="chat-header">
-            <h1>🤖 AI Chatbot</h1>
+            <h1>AI Chatbot</h1>
         </header>
         <div id="chat-box" class="chat-box">
             <div class="message user-chat">Hi there!</div>
