add the toggle button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <div class="chat-container">
         <header class="chat-header">
             <h1>AI Chatbot</h1>
+            <button id="theme-toggle" aria-label="Toggle dark mode">
+                <span class="sun-icon">☀️</span>
+                <span class="moon-icon">🌙</span>
+            </button>
         </header>
         <div id="chat-box" class="chat-box">
             <div class="message user-chat">Hi there!</div>
